add boost case
